use main for clusters

--- a/bootstrap/overlays/local.hub/values.yaml
+++ b/bootstrap/overlays/local.hub/values.yaml
@@ -74,6 +74,8 @@ applications:
   acm-clusters:
     annotations:
       argocd.argoproj.io/sync-wave: '31'
+    labels:
+      repo: main
     destinations:
       namespace: openshift-gitops
     source:
