--- a/bootstrap/overlays/local.hub/values.yaml
+++ b/bootstrap/overlays/local.hub/values.yaml
@@ -75,7 +75,7 @@ applications:
     annotations:
       argocd.argoproj.io/sync-wave: '31'
     labels:
-      repo: main
+      repo: ignore
     destinations:
       namespace: openshift-gitops
     source:
@@ -83,7 +83,7 @@ applications:
       path: components/clusters/base
       # Always use latest so we can can set gitops-revision for commit pinnning,
       # otherwise it's chicken and egg problem.
-      targetRevision: main
+      targetRevision: HEAD
 
   # Disable while we work this out
   nmstate:
