Remove role:none to experiment

--- a/tenants/gitops/overlays/shared/kustomization.yaml
+++ b/tenants/gitops/overlays/shared/kustomization.yaml
@@ -74,16 +74,8 @@ patches:
       - op: add
         path: /spec/rbac
         value:
-          defaultPolicy: 'role:none'
+          defaultPolicy: ''
           policy: |
-            p, role:none, applications, *, */*, deny
-            p, role:none, certificates, *, *, deny
-            p, role:none, clusters, *, *, deny
-            p, role:none, repositories, *, *, deny
-            p, role:none, projects, *, *, deny
-            p, role:none, accounts, *, *, deny
-            p, role:none, gpgkeys, *, *, deny
             g, system:cluster-admins, role:admin
             g, cluster-admins, role:admin
-            g, argocdadmins, role:admin
           scopes: "[accounts,groups]"
