Use head for gitops to experiment

--- a/bootstrap/overlays/local.home/values.yaml
+++ b/bootstrap/overlays/local.home/values.yaml
@@ -86,6 +86,8 @@ applications:
 # Tenants
   gitops:
     project: cluster-config
+    labels:
+      repo: use-head
     annotations:
       argocd.argoproj.io/compare-options: IgnoreExtraneous
       argocd.argoproj.io/sync-wave: '50'
