--- a/bootstrap/overlays/local/values.yaml
+++ b/bootstrap/overlays/local/values.yaml
@@ -16,6 +16,12 @@ default:
 
 applications:
 
+  odf-operator:
+    annotations:
+      argocd.argoproj.io/sync-wave: '1'
+    source:
+      path: components/odf-operator/operator/overlays/no-registry
+
   lvm-operator:
     annotations:
       argocd.argoproj.io/sync-wave: '2'
