--- a/bootstrap/overlays/local.hub/values.yaml
+++ b/bootstrap/overlays/local.hub/values.yaml
@@ -22,6 +22,20 @@ applications:
     source:
       path: clusters/overlays/local.hub/components/node-config
 
+  odf-operator:
+    annotations:
+      argocd.argoproj.io/sync-wave: '1'
+    source:
+      path: components/odf-operator/operator/overlays/no-registry
+
+  lvm-operator:
+    annotations:
+      argocd.argoproj.io/sync-wave: '2'
+    destination:
+      namespace: openshift-storage
+    source:
+      path: clusters/overlays/local.hub/components/lvm-operator
+
   odf-instance:
     annotations:
       argocd.argoproj.io/sync-wave: '2'
