--- a/bootstrap/overlays/local.hub/values.yaml
+++ b/bootstrap/overlays/local.hub/values.yaml
@@ -89,15 +89,12 @@ applications:
     annotations:
       argocd.argoproj.io/sync-wave: '31'
     labels:
-      repo: use-head
+      repo: acm-hub-bootstrap
     destinations:
       namespace: openshift-gitops
     source:
       repoURL: https://github.com/gnunn-gitops/acm-hub-bootstrap.git
       path: components/clusters/base
-      # Always use latest so we can can set gitops-revision for commit pinnning,
-      # otherwise it's chicken and egg problem.
-      targetRevision: HEAD
 
   # Disable while we work this out
   nmstate:
