Configure OpenShift console to logout using SSO instead of internal logout

--- a/bootstrap/overlays/local.home/values.yaml
+++ b/bootstrap/overlays/local.home/values.yaml
@@ -38,6 +38,12 @@ applications:
     source:
       path: clusters/overlays/local.home/components/banner
 
+  console:
+    annotations:
+      argocd.argoproj.io/sync-wave: '11'
+    source:
+      path: clusters/overlays/local.home/components/console
+
   console-links:
     annotations:
       argocd.argoproj.io/sync-wave: '11'
