--- a/bootstrap/overlays/local.hub/values.yaml
+++ b/bootstrap/overlays/local.hub/values.yaml
@@ -108,6 +108,12 @@ applications:
     source:
       path: clusters/overlays/local.hub/components/banner
 
+  console:
+    annotations:
+      argocd.argoproj.io/sync-wave: '11'
+    source:
+      path: clusters/overlays/local.hub/components/console
+
   console-links:
     annotations:
       argocd.argoproj.io/sync-wave: '11'
