Workaround bad host setting in 4.14

--- a/tenants/gitops/overlays/shared/kustomization.yaml
+++ b/tenants/gitops/overlays/shared/kustomization.yaml
@@ -81,3 +81,6 @@ patches:
             g, system:cluster-admins, role:admin
             g, cluster-admins, role:admin
           scopes: "[accounts,groups]"
+      - op: add
+        path: /spec/server/host
+        value: argocd-server-gitops.apps.home.ocplab.com
