Move shared gitops into components as an overlay

--- a/components/gitops-operator/overlays/shared/kustomization.yaml
+++ b/components/gitops-operator/overlays/shared/kustomization.yaml
@@ -1,10 +1,10 @@
 namespace: gitops
 
 resources:
+  - ../../base
   - gitops-monitoring-cluster-role.yaml
   - namespace.yaml
   - argocd-notifications-cm.yaml
-  - ../../../../components/gitops-operator/base
   - console-link.yaml
   - global-appproject.yaml
   # Tenant projects here
