Update AppSet to enable automatic sync

--- a/clusters/overlays/local.home/components/tenants/appset.yaml
+++ b/clusters/overlays/local.home/components/tenants/appset.yaml
@@ -24,4 +24,7 @@ spec:
       source:
         path: '{{ .path.path }}'
         repoURL: https://github.com/gnunn-gitops/cluster-config
-        targetRevision: main
+        targetRevision: v1.1.2
+      syncPolicy:
+        automated:
+          selfHeal: true
