--- a/tenants/product-catalog/base/values.yaml
+++ b/tenants/product-catalog/base/values.yaml
@@ -33,8 +33,8 @@ namespaces:
   dev:
     quota: medium
     annotations:
-      app.openshift.io/vcs-uri: https://github.com/gnunn-gitops/product-catalog
-      app.openshift.io/vcs-ref: main
+      openshift.io/description: Project for development environment of product catalog application
+      openshift.io/display-name: Product Catalog Development
 
   test:
     quota: medium
