Use new feature in 2.9 to respect RBAC for resources

--- a/components/gitops-operator/overlays/shared/kustomization.yaml
+++ b/components/gitops-operator/overlays/shared/kustomization.yaml
@@ -28,6 +28,7 @@ patches:
       - op: add
         path: /spec/extraConfig
         value:
+          resource.respectRBAC: "normal"
           exec.enabled: "true"
           resource.customizations.health.PersistentVolumeClaim: |
             hs = {}
