--- a/clusters/overlays/local.home/components/openshift-monitoring/cluster-monitoring-config-cm.yaml
+++ b/clusters/overlays/local.home/components/openshift-monitoring/cluster-monitoring-config-cm.yaml
@@ -6,6 +6,8 @@ metadata:
 data:
   config.yaml: |
     enableUserWorkload: true
+    alertmanagerMain:
+      enableUserAlertmanagerConfig: true
     prometheusK8s:
       externalLabels:
         cluster: local.home
