--- a/components/eso/overlays/aggregate/prometheus-rule.yaml
+++ b/components/eso/overlays/aggregate/prometheus-rule.yaml
@@ -10,9 +10,9 @@ spec:
     - alert: ExternalSecretSyncError
       annotations:
         description: |-
-          The external secret {{ $labels.name }} in namespace {{ $labels.namespace }} failed to be synced.
+          The external secret {{ $labels.exported_namespace }}/{{ $labels.name }} failed to synced.
           Use this command to check the status:
-          oc get externalsecret {{ $labels.name }} -n {{ $labels.namespace }}
+          oc get externalsecret {{ $labels.name }} -n {{ $labels.exported_namespace }}
         summary: External secret failed to sync
       labels:
         severity: warning
