Update host value of server

--- a/components/gitops-operator/overlays/shared/kustomization.yaml
+++ b/components/gitops-operator/overlays/shared/kustomization.yaml
@@ -81,3 +81,6 @@ patches:
             p, role:developers, clusters, get, *, allow
             g, developers, role:developers
           scopes: "[accounts,groups]"
+      - op: add
+        path: /spec/server/host
+        value: "argocd-server-gitops.${SUB_DOMAIN}"
