--- a/bootstrap/overlays/local.home/values.yaml
+++ b/bootstrap/overlays/local.home/values.yaml
@@ -93,6 +93,12 @@ applications:
     source:
       path: clusters/overlays/local.home/components/node-config
 
+  tekton-results:
+    annotations:
+      argocd.argoproj.io/sync-wave: '21'
+    source:
+      path: components/pipelines-operator/overlays/results
+
 # Tenants
   gitops:
     project: cluster-config
