--- a/components/gitops-admin-plugin/base/kustomization.yaml
+++ b/components/gitops-admin-plugin/base/kustomization.yaml
@@ -2,4 +2,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - github.com/gnunn-gitops/gitops-admin-plugin/manifests/overlays/install
+  - github.com/gnunn-gitops/gitops-admin-plugin/manifests/overlays/install?ref=4.15
