--- a/components/banner/base/banner.yaml
+++ b/components/banner/base/banner.yaml
@@ -3,7 +3,7 @@ kind: ConsoleNotification
 metadata:
   name: banner
 spec:
-  text: "Managed Cluster: ${CLUSTER_NAME}"
+  text: "Cluster: ${CLUSTER_NAME}"
   location: BannerTop
   color: '#fff'
   backgroundColor: '#808080'
