Make acm-policies manual sync to enable easier troubleshooting

--- a/bootstrap/overlays/local.hub/values.yaml
+++ b/bootstrap/overlays/local.hub/values.yaml
@@ -75,6 +75,7 @@ applications:
       path: components/apps/acm/overlays/observability
 
   acm-policies:
+    enableAutoSync: false
     annotations:
       argocd.argoproj.io/sync-wave: '31'
     labels:
