--- a/bootstrap/overlays/aws.cluster/kustomization.yaml
+++ b/bootstrap/overlays/aws.cluster/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 helmCharts:
 - name: argocd-app-of-app
   version: 0.2.4
-  repo: https://gnunn-gitops.github.io/helm-charts
+  repo: https://AplphaGO.github.io/helm-charts
   valuesFile: values.yaml
   namespace: openshift-gitops
   releaseName: argocd-app-of-app-0.2.4
@@ -22,4 +22,4 @@ patches:
         value: 'components/apps/compliance-operator/overlays/cis-compliance'
       - op: replace
         path: /spec/source/repoURL
-        value: 'https://github.com/gnunn-gitops/cluster-config'
+        value: 'https://github.com/AplphaGO/cluster-config'
