--- a/bootstrap/overlays/local/kustomization.yaml
+++ b/bootstrap/overlays/local/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 helmCharts:
 - name: argocd-app-of-app
   version: 0.3.0
-  repo: https://gnunn-gitops.github.io/helm-charts
+  repo: https://AplphaGO.github.io/helm-charts
   valuesFile: values.yaml
   namespace: openshift-gitops
 
@@ -21,4 +21,4 @@ patches:
         value: 'components/compliance-operator/overlays/cis-compliance-master-only'
       - op: replace
         path: /spec/source/repoURL
-        value: 'https://github.com/gnunn-gitops/cluster-config'
+        value: 'https://github.com/AplphaGO/cluster-config'
