--- a/clusters/overlays/local.hub/components/quay-registry-operator/init-quay-job.yaml
+++ b/clusters/overlays/local.hub/components/quay-registry-operator/init-quay-job.yaml
@@ -45,7 +45,7 @@ spec:
 
               sleep 120
 
-              git clone https://github.com/gnunn-gitops/quay-init
+              git clone https://github.com/AplphaGO/quay-init
 
               cd quay-init
 
