--- a/components/dev-console-plugin/base/kustomization.yaml
+++ b/components/dev-console-plugin/base/kustomization.yaml
@@ -10,7 +10,7 @@ helmGlobals:
 helmCharts:
 - name: openshift-console-plugin
   version: 0.3.0
-  repo: https://gnunn-gitops.github.io/helm-charts
+  repo: https://AplphaGO.github.io/helm-charts
   valuesFile: values.yaml
   namespace: dev-console-plugin
   releaseName: dev-console-plugin
