--- a/components/tekton-hub/base/hub.yaml
+++ b/components/tekton-hub/base/hub.yaml
@@ -7,10 +7,10 @@ spec:
 
   catalogs:
     - name: local
-      org: gnunn-gitops
+      org: AplphaGO
       type: community
       provider: github
-      url: https://github.com/gnunn-gitops/tekton-tasks
+      url: https://github.com/AplphaGO/tekton-tasks
       revision: main
 
   api:
