--- a/bootstrap/base/kustomization.yaml
+++ b/bootstrap/base/kustomization.yaml
@@ -4,6 +4,6 @@ kind: Kustomization
 helmCharts:
 - name: argocd-app-of-app
   version: 0.3.0
-  repo: https://AplphaGO.github.io/helm-charts
+  repo: https://gnunn-gitops.github.io/helm-charts
   valuesFile: values.yaml
   namespace: openshift-gitops
