--- a/tenants/product-catalog/base/kustomization.yaml
+++ b/tenants/product-catalog/base/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 helmCharts:
 - name: tenant
   version: 0.2.4
-  repo: https://AplphaGO.github.io/helm-charts
+  repo: https://gnunn-gitops.github.io/helm-charts
   valuesFile: values.yaml
   namespace: gitops
   releaseName: product-catalog
