--- a/components/vault/values.yaml
+++ b/components/vault/values.yaml
@@ -11,11 +11,11 @@ injector:
   enabled: true
   image:
     repository: "registry.connect.redhat.com/hashicorp/vault-k8s"
-    tag: "1.2.0-ubi"
+    tag: "1.4.1-ubi"
 
   agentImage:
     repository: "registry.connect.redhat.com/hashicorp/vault"
-    tag: "1.12.3-ubi"    
+    tag: "1.16.1-ubi"    
 
 csi:
   image:
@@ -25,7 +25,7 @@ csi:
 
 server:
   image:
-    tag: "1.12.3-ubi"
+    tag: "1.16.1-ubi"
     repository: registry.connect.redhat.com/hashicorp/vault
 
   extraEnvironmentVars:
@@ -35,7 +35,7 @@ server:
 
   route:
     enabled: true
-    host: vault.apps.${BASE_DOMAIN}
+    host: vault.apps.${CLUSTER_NAME}.${SUB_DOMAIN}
     tls:
       termination: reencrypt
 
@@ -90,8 +90,6 @@ server:
       - -c
       - | 
           cd /usr/local/libexec/vault
-          #export HTTP_PROXY=http://192.168.88.1:3128
-          #export HTTPS_PROXY=http://192.168.88.1:3128
           curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
           chmod +x kubectl
           curl -L -o jq https://github.com/stedolan/jq/releases/download/jq-1.6/jq-linux64
